--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
+.AppCenterCard {
+  min-height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Card {
+  background: #232946;
+  color: #fff;
+  border-radius: 18px;
+  box-shadow: 0 4px 32px 0 #23294618;
+  padding: 42px 30px;
+  max-width: 420px;
+  width: 100%;
+  margin: 0 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Card > * + * {
+  margin-top: 32px;
+}
+
+.text-center {
+  text-align: center;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
